# Luminous

./: .clang-format  .gitignore  .gitmodules  Build.bat  CMakeLists.txt  CMakePresets.json  Cleanup.bat  README.md  Runtime.bat  Submodules.bat
Editor/: CMakeLists.txt  Main.cpp  main.cpp
Editor/Assets/: EditorConfig.ini
Editor/Code/: Editor.cpp
Editor/Code/Include/: Editor.hpp  EditorLayout.hpp  EditorStyle.hpp  FileExplorerWindow.hpp  FoldersWindow.hpp  HierarchyWindow.hpp  ImguiWindow.hpp  InspectorWindow.hpp  MainWindow.hpp  TextEditorPanel.hpp  Window.hpp
Editor/Code/Include/WindowPanels/: ConsolePanel.hpp  FileExplorer.hpp  FileExplorerPanel.hpp  FileExplorerWindow.hpp  Hierarchy.hpp  HierarchyPanel.hpp  HierarchyWindow.hpp  Inspector.hpp  InspectorPanel.hpp  InspectorWindow.hpp  MainInterface.hpp  MainPanel.hpp  MainWindow.hpp  Viewport.hpp  ViewportPanel.hpp  ViewportWindow.hpp
Editor/Code/Interface/: IWindowPanel.hpp
Editor/Code/Source/: Editor.cpp  EditorLayout.cpp  EditorStyle.cpp  FileExplorerWindow.cpp  FoldersWindow.cpp  HierarchyWindow.cpp  ImguiWindow.cpp  InspectorWindow.cpp  MainWindow.cpp  TextEditorPanel.cpp  Window.cpp
Editor/Code/Source/WindowPanels/: ConsolePanel.cpp  FileExplorer.cpp  FileExplorerPanel.cpp  FileExplorerWindow.cpp  Hierarchy.cpp  HierarchyPanel.cpp  HierarchyWindow.cpp  Inspector.cpp  InspectorPanel.cpp  InspectorWindow.cpp  MainInterface.cpp  MainPanel.cpp  MainWindow.cpp  Viewport.cpp  ViewportPanel.cpp  ViewportWindow.cpp
Editor/Libs/: CMakeLists.txt
Editor/Libs/imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_internal.h
Editor/Libs/imgui/backends/: imgui_impl_vulkan.cpp
Editor/Libs/imgui/backends/vulkan/: glsl_shader.frag.u32  glsl_shader.vert  glsl_shader.vert.u32
Engine/: CMakeLists.txt
Engine/Assets/Default/Models/: Capsule.fbx  Cone.fbx  Cube.fbx  Cylinder.fbx  Monkey.fbx  Plane.fbx  Sphere.fbx  SphereInverse.fbx
Engine/Assets/Default/Save/: Scene.json
Engine/Assets/Default/Shaders/: compile_shaders.bat  frag.spv  shader.frag  shader.vert  skybox.frag  skybox.vert  skyboxvert.spv  vert.spv
Engine/Assets/Models/: cubeFace.fbx
Engine/Assets/Shaders/: compile_shaders.bat  frag.spv  shader.frag  shader.vert  vert.spv
Engine/Code/: Application.cpp  Engine.cpp
Engine/Code/Include/: Application.h  Application.hpp  Engine.hpp  Exporter.hpp
Engine/Code/Include/Core/: Engine.hpp
Engine/Code/Include/Core/GLFW/: GLFWInputManager.hpp  GLFWWindow.hpp
Engine/Code/Include/EntitySystem/: BaseComponent.hpp  Entity.hpp  EntityComponent.hpp  EntityManager.hpp
Engine/Code/Include/EntitySystem/Components/: CCamera.hpp  CModel.hpp  CRigidbody.hpp  CTransform.hpp  CameraComponent.hpp  LightComponent.hpp  ModelComponent.hpp  RigidbodyComponent.hpp  TransformComponent.hpp
Engine/Code/Include/Game/: Scene.hpp
Engine/Code/Include/Game/Scripts/: Cube.hpp  ExampleEntity.hpp  ExempleEntity.hpp  Player.hpp  PlayerModel.hpp  PlayerModel2.hpp  VikingRoom.hpp  Weapon.hpp
Engine/Code/Include/Game/Systems/: Component.hpp  Entity.hpp  Time.inl  Transform.hpp
Engine/Code/Include/ModelLoading/: AssimpModelLoader.hpp  AssimpVertex.hpp  IModel.hpp  IModelLoader.hpp  IVertex.hpp
Engine/Code/Include/Physics/: Layers.hpp  PhysicsSystem.hpp  layers.hpp  listener.hpp  physics_JOLT.hpp
Engine/Code/Include/Rendering/: IBuffer.hpp  IDevice.hpp  IInstance.hpp  IPipeline.hpp  IRender.hpp  ISurface.hpp  ISwapChain.hpp  ISynchronisation.hpp  LantualBuffer.h  LantualDevice.h  LantualInstance.h  LantualPipeline.h  LantualRender.h  LantualRenderHardwareInterface.h  LantualRenderPass.h  LantualSurface.h  LantualSwapChain.h  LantualSynchronisation.h  MainWindow.hpp  RenderHardwareInterface.hpp  Window.h  Window.hpp
Engine/Code/Include/Rendering/Camera/: Camera.hpp  CameraEditor.hpp
Engine/Code/Include/Rendering/GLFW/: GLFWInputManager.hpp  GLFWWindow.hpp
Engine/Code/Include/Rendering/Vulkan/: GLFWInputManager.hpp  Skybox.hpp  VulkanBuffer.hpp  VulkanCommandBuffer.hpp  VulkanCommandPool.hpp  VulkanDepthResource.hpp  VulkanDescriptor.hpp  VulkanDescriptorSetLayout.hpp  VulkanDevice.hpp  VulkanFrameBuffer.hpp  VulkanFrameBufferManager.hpp  VulkanInstance.hpp  VulkanMemoryAllocator.hpp  VulkanMesh.hpp  VulkanModel.hpp  (+16 more)
Engine/Code/Include/ResourceManager/: Mesh.hpp  Resource.hpp  ResourceContext.hpp  ResourceManager.hpp  ResourceManager.inl
Engine/Code/Include/Struct/: Vertex.hpp  VulkanUtilities.hpp
Engine/Code/Include/Utils/: FileReaderUtils.hpp  InputWrapperUtils.hpp  LightUtils.hpp  MsSamplesUtils.hpp  QueueFamilyIndiceUtils.hpp  ViewModeUtils.hpp
Engine/Code/Include/Wrapper/: EWindow.hpp  IInput.h  IWindow.h  IWrapper.h
Engine/Code/Interface/: IBuffer.hpp  ICommandBuffer.hpp  ICommandPool.hpp  IDepthResource.hpp  IDepthRessource.hpp  IDescriptionSetLayout.hpp  IDescriptions.hpp  IDescriptor.hpp  IDescriptorSetLayout.hpp  IDevice.hpp  IFrameBuffer.hpp  IFrameBufferManager.hpp  IGameModule.hpp  IInputManager.hpp  IInstance.hpp  IKeyCode.hpp  IMesh.hpp  IModel.hpp  IMultiSampling.hpp  IPipeline.hpp  IRender.hpp  IRenderPass.hpp  IRenderPassManager.hpp  IRenderer.hpp  IRenderingDraw.hpp  IShader.hpp  IShaderModule.hpp  ISurface.hpp  ISwapChain.hpp  ISynchronization.hpp  ITexture.hpp  IWindow.hpp
Engine/Code/Source/: Application.cpp  Engine.cpp
Engine/Code/Source/Core/: Engine.cpp
Engine/Code/Source/EntitySystem/: Entity.cpp
Engine/Code/Source/Game/: Scene.cpp
Engine/Code/Source/ModelLoading/: AssimpModelLoader.cpp  IModel.cpp  IModelLoader.cpp
Engine/Code/Source/Physics/: Layers.cpp  Listener.cpp  PhysicsSystem.cpp  layers.cpp  listener.cpp  physics_JOLT.cpp
Engine/Code/Source/Rendering/: Window.cpp
Engine/Code/Source/ResourceManager/: Mesh.cpp  ResourceManager.cpp
Engine/Code/Source/Utils/: FileReaderUtils.cpp
Engine/Code/Source/Wrapper/: EWindow.cpp  IWindow.cpp
Engine/Libs/: CMakeLists.txt
Engine/Libs/tinyobj/: tiny_obj_loader.h
Game/: CMakeLists.txt
Game/Code/Include/: GameModuleImpl.hpp
Game/Code/Source/: GameModuleImpl.cpp
Libs/: CMakeLists.txt
Runtime/: CMakeLists.txt  Main.cpp
(+169 files in other folders)
